# backtester

./: .env.example  .gitignore  README.md  hosts.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-#1.yml  deploy-pool-1.yml  deploy-pool-2.yml  deploy-pool-3.yml  deploy-pool.yml  deploy.yml  linters.yml  mypy.yml  rebase-pool-1.yml  rebase-pool-2.yml  rebase.yml  tests.yml
app/: backtester.py  baskets.py  floating_steps.py  grid.py  liquidation.py  models.py  sampler.py  settings.py  stoploss.py  storage.py  strategy.py  trader.py  xirr.py
app/exchange_client/: base.py  binance.py  bingx.py  bybit.py  dummy.py
app/fees_utils/: fees_accounting.py
app/state_utils/: sliding_counter.py  state_saver.py
app/telemetry/: client.py
etc/: add_telemetry_profit.sql  add_telemetry_qty.sql  backup-setup.md  check HDD.md  create_mrs.py  env  float_strategy.csv  host-setup.md  my_help.md  mysql_structure.sql  mysqld.conf  nginx-trader.conf  nginx.conf  php-fpm-pool.conf  supervisor-example.conf  supervisor.conf  supervisor_config_generator.py
instances/: env#1  env#2  env#3  env#3PYRUSDT  env#4  env#4ICPUSDT  env#5  env#6
rates/: BINANCE_1INCHUSDT, 1D.csv  BINANCE_1INCHUSDT, 30.csv  BINANCE_ATOMUSDT, 60.csv  BINANCE_AUCTIONUSDT, 5.csv  BINANCE_BONDUSDT, 5.csv  BINANCE_BTCUSDT, 30.csv  BINANCE_DOTUSDT, 1D.csv  BINANCE_GALAUSDT, 60.csv  BINANCE_LTCUSDT, 30.csv  BINANCE_SOLUSDT, 1D.csv  BINANCE_SOLUSDT, 60.csv  sol.csv
tests/: __init__.py  conftest.py  test_grid.py  test_sampler.py  test_sliding_counter.py  test_xirr.py
(+64 files in other folders)
